# kamkast

./: .gitignore  CMakeLists.txt  README.md  config.h.in
flatpak/: kamkast.metainfo.xml  org.mkiol.Kamkast.yml
resources/: webui.html
sfos/: harbour-kamkast.desktop  harbour-kamkast.spec
sfos/qml/: AboutPage.qml  CastingIndicator.qml  CopyableLabel.qml  CoverPage.qml  MainPage.qml  PaddedLabel.qml  SettingsPage.qml  main.qml
src/: caster.cpp  caster.hpp  databuffer.cpp  databuffer.hpp  event.cpp  event.hpp  httpserver.cpp  httpserver.hpp  kamkast.cpp  kamkast.hpp  lipstickrecordersource.cpp  lipstickrecordersource.hpp  logger.cpp  logger.hpp  main.cpp  noguieventloop.cpp  noguieventloop.hpp  options.cpp  options.hpp  settings.cpp  settings.hpp  sfosgui.cpp  sfosgui.hpp  utils.hpp
tools/: bin2header.sh
